# interceptr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENCE  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  main.py  policy.example.yaml  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: ci.yml  docker-publish.yml
app/api/: analyze.py  audit_logs.py  intercept.py  policy.py
app/core/: config.py  database.py  injection_detector.py  injection_patterns.py  policy_engine.py  rate_limiter.py
app/models/: audit_log.py
app/schemas/: analysis.py  audit_log.py  intercept.py  policy.py
app/services/: audit_log_service.py  interceptor_service.py
docs/: index.md  openai-integration.md  policy-reference.md  quickstart.md
interceptr/: __init__.py  client.py
interceptr/cli/: config.py  docker.py  main.py  setup.py
interceptr/cli/tui/: app.py  dashboard.py  logs.py  policy.py  policy_editor.py
tests/: conftest.py  test_analyze_endpoint.py  test_audit_logs.py  test_cli_version.py  test_injection_detector.py  test_intercept.py  test_intercept_with_policy.py  test_policy_cli.py  test_policy_editor.py  test_policy_engine.py  test_policy_info_api.py  test_policy_reload_api.py  test_policy_startup.py  test_regex_safety.py  test_security_controls.py
