[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interceptr"
version = "0.1.0"
description = "AI Agent Security Middleware — inspect, control, and audit every agent action"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "security", "middleware", "llm", "prompt-injection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "textual>=0.61.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
]

[project.scripts]
interceptr = "interceptr.cli.main:app"

[project.urls]
Homepage = "https://kelink.dev"
Repository = "https://github.com/trykelink/interceptr"
Documentation = "https://github.com/trykelink/interceptr/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["interceptr"]
